# ndk-audiorecoder

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wind/ndk/audiorecoder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_encoder.cpp  audio_encoder.h  com_wind_ndk_audiorecoder_AudioEncoder.cpp  com_wind_ndk_audiorecoder_AudioEncoder.h  native-lib.cpp  utils.h
app/src/main/java/com/wind/ndk/audiorecoder/: AudioEncoder.kt  AudioEncoderActivity.kt  AudioRecordPermissionDeniedException.kt  AudioRecorder.kt  AudioRecorderActivity.kt  MainActivity.kt  PCMFileConsumer.kt
app/src/main/res/layout/: activity_audio_encoder.xml  activity_audio_recorder.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wind/ndk/audiorecoder/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
